--- a/section_Introduction_The_Chagas_disease__.tex
+++ b/section_Introduction_The_Chagas_disease__.tex
@@ -10,6 +10,6 @@ The spatial dissemination of a congenitally transmitted disease sidesteps the av
 Working in collaboration with the \textit{Mundo Sano} Foundation, who provided key health expertise on the subject, in this work we discuss the use of Call Detail Records (CDRs) for the analysis of mobility patterns and the detection of possible risk zones of Chagas disease in two Latin America countries. We generate predictions of population movements between different regions, providing a proxy for the epidemic spread. Our objective is to show that geolocalized call records are rich in social and individual information, which can be used to determine whether an individual has lived in an epidemic area. We present two case studies, in Argentina and in Mexico, using data provided by mobile phone companies from each country. A discussion of how mobile data was processed is included. 
 
 Mobile phone records contain information about the movements of large subsets of the population of a country, and make them very useful to understand the spreading dynamics of infectious diseases. They have been used to understand the diffusion of malaria in Kenya~\cite{wesolowski2012quantifying} and in Ivory Coast~\cite{enns2013human}, including the refining of infection models~\cite{chunara2013large}. 
-The referenced works on Ivory Coast were performed using the D4D (Data for Development) challenge datasets released in 2013. Additional studies based on this dataset are reviewed in \cite{naboulsi2015mobile}.
+The referenced works on Ivory Coast were performed using the D4D (Data for Development) challenge datasets released in 2013. Additional studies based on the Ivory Coast dataset are reviewed in \cite{naboulsi2015mobile}.
 However, to the best of our knowledge, this is the first work that leverages mobile phone data to better understand the diffusion of the Chagas disease.
 
