--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -46,6 +46,14 @@
   publisher={OPS}
 }
 
+@article{OPS2014mapa,
+  title={Mapa de Transmisión vectorial del Mal de Chagas},
+  author={OPS},
+  journal={Organizacion Panamericana de la Salud/HDM/CD},
+  year={2014},
+  publisher={OPS}
+}
+
 @article{rassi2012american,
   title={American trypanosomiasis (Chagas disease)},
   author={Rassi, Anis and de Rezende, Joffre Marcondes},
