added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1,116 +1,130 @@
-
 @article{briceno2009chagas,
-  title={Chagas disease in the Americas: an ecohealth perspective},
-  author={Brice{\~n}o-Le{\'o}n, Roberto},
-  journal={Cadernos de Sa{\'u}de P{\'u}blica},
-  volume={25},
-  pages={S71--S82},
-  year={2009},
-  publisher={SciELO Brasil}
+  title = {{Chagas disease in the Americas: an ecohealth perspective}},
+  author = {Brice{\~n}o-Le{\'o}n, Roberto},
+  journal = {Cadernos de Sa{\'u}de P{\'u}blica},
+  volume = {25},
+  pages = {S71--S82},
+  year = {2009},
+  publisher = {SciELO Brasil},
 }
 
 
-
 @article{chunara2013large,
-  title={Large-scale Measurements of Network Topology and Disease Spread: A Pilot Evaluation Using Mobile Phone Data in Cote d’Ivoire},
-  author={Chunara, R and Nsoesie, EO},
-  journal={NetMob D4D Challenge},
-  pages={1--18},
-  year={2013}
+  title = {{Large-scale Measurements of Network Topology and Disease Spread: A Pilot Evaluation Using Mobile Phone Data in Cote d’Ivoire}},
+  author = {Chunara, R and Nsoesie, EO},
+  journal = {NetMob D4D Challenge},
+  pages = {1--18},
+  year = {2013},
 }
 
 
 @article{enns2013human,
-  title={Human Mobility and Communication Patterns in Cote d’Ivoire: A Network Perspective for Malaria Control},
-  author={Enns, E and Amuasi, J},
-  journal={NetMob D4D Challenge},
-  pages={1--14},
-  year={2013}
+  title = {{Human Mobility and Communication Patterns in Cote d’Ivoire: A Network Perspective for Malaria Control}},
+  author = {Enns, E and Amuasi, J},
+  journal = {NetMob D4D Challenge},
+  pages = {1--14},
+  year = {2013},
 }
 
 
 @phdthesis{naboulsi2015mobile,
-  title={Mobile traffic analysis: a survey},
-  author={Naboulsi, Diala and Fiore, Marco and Ribot, Stephane and Stanica, Razvan},
-  year={2015},
-  school={Universit{\'e} de Lyon; INRIA Grenoble-Rh{\^o}ne-Alpes; INSA Lyon; CNR-IEIIT}
+  title = {{Mobile traffic analysis: a survey}},
+  author = {Naboulsi, Diala and Fiore, Marco and Ribot, Stephane and Stanica, Razvan},
+  year = {2015},
+  school = {Universit{\'e} de Lyon; INRIA Grenoble-Rh{\^o}ne-Alpes; INSA Lyon; CNR-IEIIT},
 }
+
 
 @article{OPS2006chagas,
-  title={Estimacion Cuantitiva de la Enfermedad del Chagas en las Americas},
-  author={OPS},
-  journal={Organizacion Panamericana de la Salud/HDM/CD},
-  volume={425-06},
-  pages={1--6},
-  year={2006},
-  publisher={OPS}
+  title = {{Estimacion Cuantitiva de la Enfermedad del Chagas en las Americas}},
+  author = {OPS},
+  journal = {Organizacion Panamericana de la Salud/HDM/CD},
+  volume = {425-06},
+  pages = {1--6},
+  year = {2006},
+  publisher = {OPS},
 }
+
 
 @article{OPS2014mapa,
-  title={Mapa de Transmisión vectorial del Mal de Chagas},
-  author={OPS},
-  journal={Organizacion Panamericana de la Salud/HDM/CD},
-  year={2014},
-  publisher={OPS}
+  title = {{Mapa de Transmisión vectorial del Mal de Chagas}},
+  author = {OPS},
+  journal = {Organizacion Panamericana de la Salud/HDM/CD},
+  year = {2014},
+  publisher = {OPS},
 }
+
 
 @article{rassi2012american,
-  title={American trypanosomiasis (Chagas disease)},
-  author={Rassi, Anis and de Rezende, Joffre Marcondes},
-  journal={Infectious disease clinics of North America},
-  volume={26},
-  number={2},
-  pages={275--291},
-  year={2012},
-  publisher={Elsevier}
+  title = {{American trypanosomiasis (Chagas disease)}},
+  author = {Rassi, Anis and de Rezende, Joffre Marcondes},
+  journal = {Infectious disease clinics of North America},
+  volume = {26},
+  number = {2},
+  pages = {275--291},
+  year = {2012},
+  publisher = {Elsevier},
 }
+
 
 @inproceedings{sarraute2015socialevents,
-  title={Social Events in a Time-Varying Mobile Phone Graph},
-  author={Sarraute, Carlos and Brea, Jorge and Burroni, Javier and Wehmut, Klaus and Ziviani, Artur and Alvarez-Hamelin, Ignacio},
-  booktitle={Fourth International Conference on the Analysis of Mobile Phone Datasets (NetMob)},
-  year={2015}
+  title = {{Social Events in a Time-Varying Mobile Phone Graph}},
+  author = {Sarraute, Carlos and Brea, Jorge and Burroni, Javier and Wehmut, Klaus and Ziviani, Artur and Alvarez-Hamelin, Ignacio},
+  booktitle = {Fourth International Conference on the Analysis of Mobile Phone Datasets (NetMob)},
+  year = {2015},
 }
+
 
 @article{schmunis2010chagas,
-  title={Chagas disease: a Latin American health problem becoming a world health problem},
-  author={Schmunis, Gabriel A and Yadon, Zaida E},
-  journal={Acta tropica},
-  volume={115},
-  number={1},
-  pages={14--21},
-  year={2010},
-  publisher={Elsevier}
+  title = {{Chagas disease: a Latin American health problem becoming a world health problem}},
+  author = {Schmunis, Gabriel A and Yadon, Zaida E},
+  journal = {Acta tropica},
+  volume = {115},
+  number = {1},
+  pages = {14--21},
+  year = {2010},
+  publisher = {Elsevier},
 }
+
 
 @article{tizzoni2014use,
-  title={On the use of human mobility proxies for modeling epidemics},
-  author={Tizzoni, Michele and Bajardi, Paolo and Decuyper, Adeline and King, Guillaume Kon Kam and Schneider, Christian M and Blondel, Vincent and Smoreda, Zbigniew and Gonz{\'a}lez, Marta C and Colizza, Vittoria},
-  journal={PLoS Comput Biol},
-  volume={10},
-  number={7},
-  pages={e1003716},
-  year={2014},
-  publisher={Public Library of Science}
+  title = {{On the use of human mobility proxies for modeling epidemics}},
+  author = {Tizzoni, Michele and Bajardi, Paolo and Decuyper, Adeline and King, Guillaume Kon Kam and Schneider, Christian M and Blondel, Vincent and Smoreda, Zbigniew and Gonz{\'a}lez, Marta C and Colizza, Vittoria},
+  journal = {PLoS Comput Biol},
+  volume = {10},
+  number = {7},
+  pages = {e1003716},
+  year = {2014},
+  publisher = {Public Library of Science},
 }
+
 
 @article{wesolowski2012quantifying,
-  title={Quantifying the impact of human mobility on malaria},
-  author={Wesolowski, Amy and Eagle, Nathan and Tatem, Andrew J and Smith, David L and Noor, Abdisalan M and Snow, Robert W and Buckee, Caroline O},
-  journal={Science},
-  volume={338},
-  number={6104},
-  pages={267--270},
-  year={2012},
-  publisher={American Association for the Advancement of Science}
+  title = {{Quantifying the impact of human mobility on malaria}},
+  author = {Wesolowski, Amy and Eagle, Nathan and Tatem, Andrew J and Smith, David L and Noor, Abdisalan M and Snow, Robert W and Buckee, Caroline O},
+  journal = {Science},
+  volume = {338},
+  number = {6104},
+  pages = {267--270},
+  year = {2012},
+  publisher = {American Association for the Advancement of Science},
 }
+
 
 @article{who2016,
-  title={Chagas disease (American trypanosomiasis)},
-  author={WHO},
-  journal={{World Health Organization} Fact sheets},
-  year={2016},
-  url={http://www.who.int/mediacentre/factsheets/fs340/en/},
-  urldate={2016-05-09}
+  title = {{Chagas disease (American trypanosomiasis)}},
+  author = {WHO},
+  journal = {{World Health Organization} Fact sheets},
+  year = {2016},
+  url = {http://www.who.int/mediacentre/factsheets/fs340/en/},
+  urldate = {2016-05-09},
 }
 
+
+@misc{plan_nacional_chagas,
+  author = {Ministerio de Salud Argentina},
+  title = {{Plan Nacional de Chagas}},
+  howpublished = {\url{http://www.msal.gob.ar/chagas/}},
+  year = {2016},
+  note = {[Online, accessed 9-may-2016]},
+}
