--- a/The_dynamic_interaction_of_the__1.tex
+++ b/The_dynamic_interaction_of_the__1.tex
@@ -1,11 +1,11 @@
-The dynamic interaction of the triatomine infested areas and the human mobility patterns create a difficult scenario to track down individuals or spots with high prevalence of infected people or transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. To the best of our knowledge the work described here is the first attempt to use mobile phone data to correlate migrations and cellphone usage to understand Chagas’ epidemic spatial structure.
+The dynamic interaction of the triatomine infested areas and the human mobility patterns create a difficult scenario to track down individuals or spots with high prevalence of infected people or transmission risk. Available methods of surveying the state of the Chagas disease in Argentina nowadays are limited to individual screenings of individuals. The work described here is the first attempt to use mobile phone data to correlate migrations and cellphone usage to understand Chagas’ epidemic spatial structure.
 
-Recent national estimates indicate that there exist at least one million people carrying the parasite with more than seven million exposed. Experts from the Foundation underline the current difficulties faced by the national health systems where on average, only two thousand people are treated yearly. They add that even though governamental programs have been ongoing for years now \ref{plan_naciona_chagas}, data on the issue is scarse or hardly accessible. This presents a real obstacle to ongoing research and coordination efforts to tackle the disease in the region.
+Recent national estimates indicate that there exist at least one million people carrying the parasite with more than seven million exposed. Experts from the Mundo Sano Foundation underline the current difficulties faced by the national health systems where on average, only two thousand people are treated yearly. They add that even though governmental programs have been ongoing for years now \cite{plan_nacional_chagas}, data on the issue is scarse or hardly accessible. This presents a real obstacle to ongoing research and coordination efforts to tackle the disease in the region.
 
 There exist different approaches in the literature making use of mobile data applied epidemiological or health problems.
 %\begin{comment} La siguiente info la saco de aqui  https://docs.google.com/document/d/1ZClgYFTLCxmg7wvRXqz2V1EP7Wcg0vd2ZwEBOLW2VOk \end{comment} 
-Amy Wesolowski et al.~\cite{wesolowski2012quantifying} quantify the impact of human mobility on Malaria disease movement in Kenya with disease prevalence information.
-Tizzoni et al.~\cite{tizzoni2014use} compare different mobility modelling using theoretical approaches, available census data and models based on CDRs interactions to infer movements and compare all models studied with CDRs and mobility census data to infer
+Wesolowski et al.~\cite{wesolowski2012quantifying} quantify the impact of human mobility on Malaria disease movement in Kenya with disease prevalence information.
+Tizzoni et al.~\cite{tizzoni2014use} compare different mobility models using theoretical approaches, available census data and models based on CDRs interactions to infer movements. They found that the models based on CDRs and mobility census data are highly correlated, illustrating their use as mobility proxies.
 
 Other works directly study CDRs to characterize human mobility and other
-sociodemographic information. A complete survey of mobile traffic analysis articles may be found in~\cite{naboulsi2015mobile}. Antenna usage is explored in Sarraute et al.~\cite{sarraute2015socialevents} to automatically detect large social-events in real time. Using the social graph to infer 
+sociodemographic information. A complete survey of mobile traffic analysis articles may be found in~\cite{naboulsi2015mobile}. Antenna usage is explored in Sarraute et al.~\cite{sarraute2015socialevents} to automatically detect large social events, using the social graph to infer the probability of attending events.
