--- a/The_dynamic_interaction_of_the__1.tex
+++ b/The_dynamic_interaction_of_the__1.tex
@@ -8,4 +8,4 @@ Wesolowski et al.~\cite{wesolowski2012quantifying} quantify the impact of human 
 Tizzoni et al.~\cite{tizzoni2014use} compare different mobility models using theoretical approaches, available census data and models based on CDRs interactions to infer movements. They found that the models based on CDRs and mobility census data are highly correlated, illustrating their use as mobility proxies.
 
 Other works directly study CDRs to characterize human mobility and other
-sociodemographic information. A complete survey of mobile traffic analysis articles may be found in~\cite{naboulsi2015mobile}. Antenna usage is explored in Sarraute et al.~\cite{sarraute2015socialevents} to automatically detect large social events, using the social graph to infer the probability of attending events.
+sociodemographic information. A complete survey of mobile traffic analysis articles may be found in~\cite{naboulsi2015mobile}. Antenna usage is explored in \cite{sarraute2015socialevents} to automatically detect large social events, using the social graph to infer the probability of attending events.
