--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -49,7 +49,7 @@
 @article{OPS2014mapa,
   title = {{Mapa de Transmisión vectorial del Mal de Chagas}},
   author = {OPS},
-  journal = {Organizacion Panamericana de la Salud/HDM/CD},
+  journal = {Organizacion Panamericana de la Salud},
   year = {2014},
   publisher = {OPS},
 }
@@ -124,7 +124,7 @@
 @misc{plan_nacional_chagas,
   author = {Ministerio de Salud Argentina},
   title = {{Plan Nacional de Chagas}},
-  howpublished = {\url{http://www.msal.gob.ar/chagas/}},
+  url = {http://www.msal.gob.ar/chagas/},
   year = {2016},
   note = {[Online, accessed 9-may-2016]},
 }
