--- a/title.tex
+++ b/title.tex
@@ -1,1 +1,2 @@
-Unveiling Chagas with Big Data
+Uncovering the Diffusion of an Infectious Disease with Mobile Phone Data
+%Unveiling Chagas with Big Data
