--- a/section_Data_sources_As_a__.tex
+++ b/section_Data_sources_As_a__.tex
@@ -10,7 +10,7 @@ Other general characteristics are that logs are timestamped and geolocalized by 
 
 The mexican data source is an anonymized dataset from a national mobile phone operator. Data is available for every call made within a period of 19 months from January 2014 to September 2015. The raw logs contain about 12 million calls per day for more than 8 million users that accessed the telecommunication company's (TelCo) network to place the call. This means that users from other TelCos are logged, as long as one of the users registering the call is a client of the operator. In practice, we only considered CDRs between TelCo users since geolocalization was only possible for this group.
 
-Call duration, Information logged for each
+Information logged for each call included the duration and timestamp of the call, the users participating in the call and the antenna id that transmitted the call to the TelCo client. 
 
 (EJEMPLO DE UNA TABLA DE DATOS CRUDOS o simpleformat?)
 
