--- a/section_Future_Work_Lines_for__.tex
+++ b/section_Future_Work_Lines_for__.tex
@@ -1,5 +1,10 @@
 \section{Future Work}
-Lines for future work:
+
+The mobility and social information extracted from CDRs analysis has been shown to be of practical use for Chagas disease research. Helping to make data driven decisions which in turn is key to support epidemiological policy interventions in the region. 
+
+Extensions of this work could that are being con 
+Following is a list including lines of future work that are being considered:
+
 \begin{itemize}
     \item Compare these results against an actual serology or another survey on the prevalence of the disease. In a future stage, feed the algorithm with new data from said studies. 
     \item Differentiate rural antennas from urban ones. Rural areas are more vulnerable to the disease spread, because the vector lives more easily in rural constructions, so we may want to tag them to treat them differently. This could be done automatically by analyzing the differences between the spatial distribution of the antennas in each case. Another goal can be to identify precarious settlements within urban areas (with the addition of external information).
