--- a/section_Future_Work_The_mobility__.tex
+++ b/section_Future_Work_The_mobility__.tex
@@ -1,14 +1,11 @@
 \section{Future Work}
 
-The mobility and social information extracted from CDRs analysis has been shown to be of practical use for Chagas disease research. Helping to make data driven decisions which in turn is key to support epidemiological policy interventions in the region. 
-
-Extensions of this work could that are being con 
-Following is a list including lines of future work that are being considered:
+The mobility and social information extracted from CDRs analysis has been shown to be of practical use for Chagas disease research. Helping to make data driven decisions which in turn is key to support epidemiological policy interventions in the region. For the purpose of continuing this line of work, following is a list of possible extensions being considered:
 
 \begin{itemize}
-    \item Compare these results against an actual serology or another survey on the prevalence of the disease. In a future stage, feed the algorithm with new data from said studies. 
-    \item Differentiate rural antennas from urban ones. Rural areas are more vulnerable to the disease spread, because the vector lives more easily in rural constructions, so we may want to tag them to treat them differently. This could be done automatically by analyzing the differences between the spatial distribution of the antennas in each case. Another goal can be to identify precarious settlements within urban areas (with the addition of external information).
-    \item Analyze seasonal migrations: many seasonal workers might leave the endemic area for several months while still carrying the disease. Aanlyzing these migrations can give information on which communities have a high influx of people from the endemic zone.
+    \item Compare these results against actual serology or survey disease prevalence. Data collected from fieldwork could be fed to the algorithm in order to supervise the learning. 
+    \item Differentiating rural antennas from urban ones. This is important as rural areas have conditions which are more vulnerable to the disease spread. \textit{T. Cruzi} transmission is favored by rural building materials and domestic animals contribute to complete the parasite's lifecycle. Antennas could be automatically tagged as rural by analyzing the differences between the spatial distribution of the antennas in each area. Another goal could be to identify precarious settlements within urban areas, with the help of census data sources.
+    \item Seasonal migration analysis:  many seasonal workers might leave the endemic area for several months while still carrying the disease. Aanlyzing these migrations can give information on which communities have a high influx of people from the endemic zone.
     \item Add more regions to the analysis.
     \item Search for epidemiological data at a finer grain, such as specific historical infection cases. Splitting the endemic region according to the infection rate in different areas, or considering particular infections.
     \item Feature exploration, to search for correlations with being infected.
