--- a/section_Future_Work_The_mobility__.tex
+++ b/section_Future_Work_The_mobility__.tex
@@ -5,8 +5,8 @@ The mobility and social information extracted from CDRs analysis has been shown 
 \begin{itemize}
     \item Compare these results against actual serology or survey disease prevalence. Data collected from fieldwork could be fed to the algorithm in order to supervise the learning. 
     \item Differentiating rural antennas from urban ones. This is important as rural areas have conditions which are more vulnerable to the disease spread. \textit{T. Cruzi} transmission is favored by rural building materials and domestic animals contribute to complete the parasite's lifecycle. Antennas could be automatically tagged as rural by analyzing the differences between the spatial distribution of the antennas in each area. Another goal could be to identify precarious settlements within urban areas, with the help of census data sources.
-    \item Seasonal migration analysis:  many seasonal workers might leave the endemic area for several months while still carrying the disease. Aanlyzing these migrations can give information on which communities have a high influx of people from the endemic zone.
-    \item Add more regions to the analysis.
+    \item Seasonal migration analysis:  experts from the Foundation underlined that many seasonal migrations occur in the \textit{Gran Chaco} region.  Workers might leave the endemic area for several months possibly introducing the parasite to foreign populations. The analyisis of these movements can give information on which communities have a high influx of people from the endemic zone.
+    %\item Add more regions to the analysis.
     \item Search for epidemiological data at a finer grain, such as specific historical infection cases. Splitting the endemic region according to the infection rate in different areas, or considering particular infections.
     \item Feature exploration, to search for correlations with being infected.
     \item Apply best fit model to Argentinian dataset. Provide that info to a Chagas risk model. Assuming that a high influx of individuals from epidemic regions is correlated with a higher risk in that area the algorithm could highlight these points. % revisar
