--- a/section_Future_Work_The_mobility__.tex
+++ b/section_Future_Work_The_mobility__.tex
@@ -8,8 +8,8 @@ The mobility and social information extracted from CDRs analysis has been shown 
     \item Seasonal migration analysis:  experts from the Foundation underlined that many seasonal migrations occur in the \textit{Gran Chaco} region.  Workers might leave the endemic area for several months possibly introducing the parasite to foreign populations. The analyisis of these movements can give information on which communities have a high influx of people from the endemic zone.
     %\item Add more regions to the analysis.
     \item Search for epidemiological data at a finer grain, such as specific historical infection cases. Splitting the endemic region according to the infection rate in different areas, or considering particular infections.
-    \item Feature exploration, to search for correlations with being infected.
-    \item Apply best fit model to Argentinian dataset. Provide that info to a Chagas risk model. Assuming that a high influx of individuals from epidemic regions is correlated with a higher risk in that area the algorithm could highlight these points. % revisar
+    \item Feature exploration to search for correlations with being infected.
+    \item (FALTA RESCRIBIR) Apply best fit model to Argentinian dataset. Provide that info to a Chagas risk model. Assuming that a high influx of individuals from epidemic regions is correlated with a higher risk in that area the algorithm could highlight these points. % revisar
 \end{itemize}
 
 \section{Acknowledgements}
