--- a/Procedimiento_Obtener_la_lista_de__.tex
+++ b/Procedimiento_Obtener_la_lista_de__.tex
@@ -5,7 +5,7 @@
 	% Determinar las agregaciones por antena
 	% Visualizar (agrego alfa, min_volume y zoom en regiones)
 
-\section{Procedure}
+\section{Methodology}
 \subsection{Home detection}
 
     The first step of the process involves determining the area in which each user lives. Having the granularity of the geolocated data at the antenna level, we can at most match each user $u$ with its \textit{home antenna} $H_u$.
