--- a/section_Data_sources_Our_data__.tex
+++ b/section_Data_sources_Our_data__.tex
@@ -20,7 +20,7 @@ Information logged for each call included the duration and timestamp of the call
 
 (EJEMPLO DE UNA TABLA DE DATOS CRUDOS o simpleformat?)
 
-\subsection{Data Limitations}
+\subsection{Data limitations}
 
 Although a lot of information is available in a one month CDR dataset, there maybe limitations in its representativeness. In each case, data is sourced from a single TelCo and no information is given on the distribution of its users. Thus calls not be correctly representing social interactions and movements between two given jurisdictions. Also, it is not straightforward that user movements will be captured every time by the data. A user might not be using his cellphone when he is on the move.
 However, some of this limitations are offset by the datasets' sizes. We can assume that the amount of users observed in each set is enough to correlate real mobility or social links between different areas.
