--- a/header.tex
+++ b/header.tex
@@ -1,5 +1,8 @@
 \usepackage{subfigure}
 
+\usepackage{amsmath}
+\usepackage{amsfonts}
+
 \def \calG {\mathcal{G}}
 \def \calN {\mathcal{N}}
 \def \calE {\mathcal{E}}
