--- a/header.tex
+++ b/header.tex
@@ -3,8 +3,8 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 
-\def \calG {\mathcal{G}}
-\def \calN {\mathcal{N}}
-\def \calE {\mathcal{E}}
-\def \calL {\mathcal{L}}
+\newcommand{\calG}{\mathcal{G}}
+\newcommand{\calN}{\mathcal{N}}
+\newcommand{\calE}{\mathcal{E}}
+\newcommand{\calL}{\mathcal{L}}
 
