--- a/section_Data_sources_Our_data__.tex
+++ b/section_Data_sources_Our_data__.tex
@@ -30,7 +30,7 @@ Since geolocation information is available only for users in $\calN_C$, in the a
 
 \subsection{Data limitations}
 
-Although a lot of information is available in a one month CDR dataset, there maybe limitations in its representativeness. In each case, data is sourced from a single TelCo and no information is given on the distribution of its users. Thus calls not be correctly representing social interactions and movements between two given jurisdictions. Also, it is not straightforward that user movements will be captured every time by the data. A user might not be using his cellphone when he is on the move.
-However, some of this limitations are offset by the datasets' sizes. We can assume that the amount of users observed in each set is enough to correlate real mobility or social links between different areas.
+Although a lot of information is available in the CDR datasets, there may be limitations in their representativeness of the whole population. In each case, data is sourced from a single mobile phone operator, and no information is given on the distribution of its users. Thus calls may not be correctly representing social interactions and movements between two given jurisdictions. Also, not all user movements will be captured by the log records. A user might not be using his cellphone while he is on the move.
+However, some of this limitations are offset by the datasets' sizes. We can assume that the amount of users observed in each set is sufficient to correlate real mobility or social links between different areas.
 
 % Si podemos reflotemos el grafico de clustering de provincias segun comunicaciones, y repitamos para estados en Mexico.
