--- a/Procedimiento_Obtener_la_lista_de__.tex
+++ b/Procedimiento_Obtener_la_lista_de__.tex
@@ -6,9 +6,10 @@
 	% Visualizar (agrego alfa, min_volume y zoom en regiones)
 
 \section{Methodology}
+
 \subsection{Home detection}
 
-    The first step of the process involves determining the area in which each user lives. Having the granularity of the geolocated data at the antenna level, we can at most match each user $u$ with its \textit{home antenna} $H_u$.
+    The first step of the process involves determining the area in which each user lives. Having the granularity of the geolocated data at the antenna level, we can at most match each user $u \in \calN_C$ with its \textit{home antenna} $H_u$.
 
     To do so, we assume $H_u$ as the antenna in which user $u$ spends most of the time during weekday nights. This, according to our categorization of types of days of the week, corresponds to Monday to Thursday nights, from 8pm to 6am of the following day. This was based on the assumption that on any given day, users will be located at home during night time.
     
