--- a/Procedimiento_Obtener_la_lista_de__.tex
+++ b/Procedimiento_Obtener_la_lista_de__.tex
@@ -39,7 +39,7 @@
 	\begin{itemize}
 		\item the \textbf{area} depends on the population living in the antenna $N_a$.
 		%el \textbf{\'area} depende de la cantidad de usuarios (habitantes),
-		\item the \textbf{color}, is related to the fraction $\nicefrac{V_a}{N_a}$ of vulnerable users living there.
+		\item the \textbf{color}, is related to the fraction ${V_a}/{N_a}$ of vulnerable users living there.
 		%el \textbf{color} corresponde al porcentaje de usuarios vulnerables que viven en esa antena.
 	\end{itemize}
     
