--- a/section_Ongoing_work_The_CDR__1.tex
+++ b/section_Ongoing_work_The_CDR__1.tex
@@ -35,5 +35,4 @@ Classification algorithms for this first iteration are based on the most common 
 
 Where possible, feature importance methods will be used to quantify the contribution of the feature or the interaction of features to the mobility of the users.
 
-\subsection{Maps for Mexico}
-MOSTRAR MAPAS O NO??
+%\subsection{Maps for Mexico}
