--- a/figures/Ambientes_Gran_Chaco-Mexico1/caption.tex
+++ b/figures/Ambientes_Gran_Chaco-Mexico1/caption.tex
@@ -1,1 +1,1 @@
-Replace this text with your caption
+The mexican epidemic region including the states of Jalisco, Oaxaca, Veracruz, Guerrero, Morelos, Puebla, Hidalgo and Tabasco.
