--- a/subsection_Maps_of_Mexico_In__.tex
+++ b/subsection_Maps_of_Mexico_In__.tex
@@ -1,3 +1,3 @@
 \subsection{Maps of Mexico}
 
-In 2004 the joint work of the \textit{Instituto Nacional de Cardiología “Ignacio Chávez”} (INC) and the \textit{Instituto de Biología de la UNAM } (IB) resulted in a Chagas disease database for Mexico \ref{chagmex}. Reviewing positive serology in blood banks and human reported cases per state, an epidemic risk map description was produced to geographically situate the disease. Based on this data, we defined the mexican epidemic area, selecting the states having the top 25\% prevalence rates nationwide. 
+In 2004 the joint work of the \textit{Instituto Nacional de Cardiología “Ignacio Chávez”} (INC) and the \textit{Instituto de Biología de la UNAM } (IB) resulted in a Chagas disease database for Mexico \ref{chagmex}. Reviewing positive serology in blood banks and human reported cases per state, an epidemic risk map description was produced to geographically situate the disease. Based on this data, we defined the mexican epidemic area, selecting the states having the top 25\% prevalence rates nationwide. The resulting risk region covers most of the South region of the country and includes the states of Jalisco, Oaxaca, Veracruz, Guerrero, Morelos, Puebla, Hidalgo and Tabasco.
