--- a/section_Introduction_Chagas_disease_is__.tex
+++ b/section_Introduction_Chagas_disease_is__.tex
@@ -1,14 +1,14 @@
 \section{Introduction}
 
-Chagas' disease is a tropical parasitic epidemic of global reach, spread mostly across 17 Latin American countries. The World Health Organization (WHO) estimates more than six million infected people worldwide~\cite{who2016}. Most transmissions occur in the endemic regions in America via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family (also called "kissing bug", and known by many local names such as "vinchuca" in Argentina, Bolivia, Chile and Paraguay, and "chinche" in Central America). In recent years and due to globalization and migrations, the disease has become a health issue in other continents, particularly in countries who receive Latin American immigrants such as Spain and the United States~\cite{schmunis2010chagas}, making it a global health problem.
+Chagas disease is a tropical parasitic epidemic of global reach, spread mostly across 17 Latin American countries. The World Health Organization (WHO) estimates more than six million infected people worldwide~\cite{who2016}. Most transmissions occur in the endemic regions in America via the \textit{Trypanosoma cruzi} parasite, vector-borne by the \textit{Triatomine} insect family (also called "kissing bug", and known by many local names such as "vinchuca" in Argentina, Bolivia, Chile and Paraguay, and "chinche" in Central America). In recent years and due to globalization and migrations, the disease has become a health issue in other continents, particularly in countries who receive Latin American immigrants such as Spain and the United States~\cite{schmunis2010chagas}, making it a global health problem.
 
 A crucial characteristic of the infection is that it may last 10 to 30 years in an individual without being detected~\cite{rassi2012american}, which greatly complicates effective detection and treatment. Long-term human mobility, particularly seasonal and permanent rural-urban migration, thus plays a key role in the spread of the epidemic~\cite{briceno2009chagas}. Relevant routes of transmission also include blood transfusion and congenital transmission, estimating 14,000 newborns infected each year in the Americas~\cite{OPS2006chagas}.
 % \begin{comment}  en el drive estan las ppt del min salud \end{comment}. 
 The spatial dissemination of a congenitally transmitted disease sidesteps the available measures to control risk groups, and shows that individuals who have not been exposed to the disease vector should also be included in detection campaigns.
 
-In this work we discuss the use of Call Detail Records (CDRs) for the analysis of mobility patterns and the detection of possible risk zones of Chagas' disease in two Latin America countries. This project was performed in collaboration with the \textit{Mundo Sano} Foundation, who provided key health expertise on the subject. We generate predictions of population movements between different regions, providing a proxy for the epidemic spread. Our objective is to show that geolocalized call records are rich in social and individual information, which can be used to determine whether an individual has lived in an epidemic area. We present two case studies, in Argentina and in Mexico, using data provided by mobile phone companies from each country. A discussion of how mobile data was processed is included. 
+In this work we discuss the use of Call Detail Records (CDRs) for the analysis of mobility patterns and the detection of possible risk zones of Chagas disease in two Latin America countries. This project was performed in collaboration with the \textit{Mundo Sano} Foundation, who provided key health expertise on the subject. We generate predictions of population movements between different regions, providing a proxy for the epidemic spread. Our objective is to show that geolocalized call records are rich in social and individual information, which can be used to determine whether an individual has lived in an epidemic area. We present two case studies, in Argentina and in Mexico, using data provided by mobile phone companies from each country. A discussion of how mobile data was processed is included. 
 
 Mobile phone records contain information about the movements of large subsets of the population of a country, and make them very useful to understand the spreading dynamics of infectious diseases. They have been used to understand the diffusion of malaria in Kenya~\cite{wesolowski2012quantifying} and in Ivory Coast~\cite{enns2013human}, including the refining of infection models~\cite{chunara2013large}. 
 The referenced works on Ivory Coast were performed using the D4D (Data for Development) challenge datasets released in 2013. Additional studies based on the Ivory Coast dataset are reviewed in \cite{naboulsi2015mobile}.
-However, to the best of our knowledge, this is the first work that leverages mobile phone data to better understand the diffusion of the Chagas' disease.
+However, to the best of our knowledge, this is the first work that leverages mobile phone data to better understand the diffusion of the Chagas disease.
 
