--- a/section_Chagas_disease_in_Argentina__.tex
+++ b/section_Chagas_disease_in_Argentina__.tex
@@ -1,3 +1,3 @@
-\section{Chagas' disease in Argentina}
+\section{Chagas disease in Argentina}
 
 In Argentina vector control campaigns have been ongoing for more than thirty years as the main epidemic counter-measure. The \textit{Gran Chaco}, situated in the northern part of the country, is home to most of the infected triatomines~\cite{OPS2014mapa}. The ecoregion's low socio-demographic conditions further supports the parasite's lifecycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among rural and poor areas. The ecoregion as of today is hyperendemic for the disease.
